--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <h1>Hello world!</h1>
+    <div><img src="imagesource.jpg" alt="Computer HP" style="width:100%;max-width:960px"></div>
     <p>This is the first file in my new Git Repo.</p>
-    
+    <p>A new line in our file!</p>
+
 </body>
 </html>
